--- a/v2/patrodent/templates/index.html
+++ b/v2/patrodent/templates/index.html
@@ -42,14 +42,12 @@
                             <li><img src="{% static 'images/sala_de_esperas.jpg' %}" alt=""></li>
                             <li><img src="{% static 'images/recepcion3.jpg' %}" alt=""></li>
                             <li><img src="{% static 'images/cristal.jpg' %}" alt=""></li>
-                            <li><img src="{% static 'images/patrocinio_y_angela2.jpg' %}" alt=""></li>
                         </ul>
                         <ul class="pagination">
                             <li><a href="#"><span>1</span></a></li>
                             <li><a href="#"><span>2</span></a></li>
                             <li><a href="#"><span>3</span></a></li>
                             <li><a href="#"><span>4</span></a></li>
-                            <li><a href="#"><span>5</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -71,7 +69,7 @@
 
         <div class="grid_7">
             <img src="{% static 'images/logo_materiales_premium.png' %}" class="tip-logo" alt="materiales premium">
-            <h4 class>Excelencia</h4>
+            <h4 class><a href="{% url 'template_view' "instalaciones" %}">Excelencia</a></h4>
             <p class="p3">Trabajamos sólo con materiales de alta gama y nuestras instalaciones cuentan con todas las comodidades para ofrecer un diagnóstico avanzado de todos nuestros casos.</p>
         </div>
     </div>
