--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -59,27 +59,11 @@
             <table class="profile">
                 <tr>
                     <td>
-                        <img src="{% static 'images/patrocinio.jpg' %}" alt="" />
+                        <img src="{% static 'images/angela3.jpg' %}" alt="Fotografia de la doctora ángela martín" />
                     </td>
                     <td>
-                        <h3>Dra. Patrocinio Gómez Martínez</h3>
-                        <p>Fundadora y directora médica.  ORTODONCISTA</p>
-                        <ul class="enum">
-                            <li>Licenciada en Medicina y Cirugía General. Universidad de Sevilla</li>
-                            <li>Especialista en Estomatología. Universidad de Sevilla</li>
-                            <li>DIPLÔME D´UNIVERSITÉ EN ORTHODONTIE. Universidad de Nantes (Francia)</li>
-                            <li>Curso BRACKETS DAMON SYSTEM </li>
-                            <li>Ponente de cursos de formación oral y funcional a pediatras</li>
-                        </ul>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <img src="{% static 'images/angela.jpg' %}" alt="" />
-                    </td>
-                    <td>
-                        <h3>Dra. Ángela Martín Gómez</h3>
-                        <p>Co-Directora médica. CIRUJANA BUCAL</p>
+                        <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
+                        <p>Directora médica. CIRUJANA BUCAL</p>
                         <ul class="enum">
                             <li>Graduada en Odontología. Universidad Europea de Madrid</li>
                             <li>Título de Especialización Universitaria en Cirugía y Rehabilitación Implantológica. Universidad de Sevilla</li>
