--- a/v2/patrodent/templates/preguntas-estetica-dental.html
+++ b/v2/patrodent/templates/preguntas-estetica-dental.html
@@ -26,7 +26,7 @@
 <div class="question">
     <h4><i class="fa fa-plus"></i> <i class="fa fa-minus hidden"></i>¿Cuánto dura un blanqueamiento dental?</h4>
     <div class="answer">
-        <p>La duración de los resultados dependerá de los cuidados que realice el paciente, así como de factores extrínsecos como el vino tinto, café, tabaco… No obstante, el paciente tendrá por escrito todas las indicaciones para el cuidado óptimo de sus dientes tras el blanqueamiento. </p>
+        <p>La duración de los resultados dependerá de los cuidados que realice el paciente, así como de factores extrínsecos como el vino tinto, café, tabaco... No obstante, el paciente tendrá por escrito todas las indicaciones para el cuidado óptimo de sus dientes tras el blanqueamiento. </p>
     </div>
 </div>
 <div class="question">
