--- a/v2/patrodent/templates/preguntas-muelas-juicio.html
+++ b/v2/patrodent/templates/preguntas-muelas-juicio.html
@@ -37,7 +37,7 @@
 <div class="question">
     <h4><i class="fa fa-plus"></i> <i class="fa fa-minus hidden"></i>¿Cómo es el postoperatorio tras una cirugía de una muela del juicio?</h4>
     <div class="answer">
-        <p>El postoperatorio es muy versátil. Depende de diversos factores como son la edad del paciente, la posición e inclinación del cordal, patología asociada, técnica quirúrgica, medicación que tome el paciente, enfermedades concomitantes…</p>
+        <p>El postoperatorio es muy versátil. Depende de diversos factores como son la edad del paciente, la posición e inclinación del cordal, patología asociada, técnica quirúrgica, medicación que tome el paciente, enfermedades concomitantes...</p>
         <p>Por lo tanto, el postoperatorio variará según el paciente y la técnica quirúrgica, sabiendo además que el dolor es un síntoma totalmente subjetivo.</p>
         <p>Es totalmente normal que la herida sangre ligeramente durante las primeras 24h, pudiendo aparecer la saliva teñida.</p>
         <p>También es previsible cierto dolor, inflamación y dificultad de apertura bucal.</p>
