--- a/v2/patrodent/templates/preguntas-odontopediatria.html
+++ b/v2/patrodent/templates/preguntas-odontopediatria.html
@@ -25,7 +25,7 @@
     <div class="answer">
         <ul class="enum">
             <li><strong>Menos de 6 meses</strong>: Retira los restos de leche con una gasa humedecida o un dedal de silicona. Mínimo una vez/día. Lo ideal es hacerlo después de dar el pecho o el biberón para evitar su fermentación</li>
-            <li><strong>6 meses o más</strong>: Empiezan a salir los dientes  mismo procedimiento en encías, dientes, lengua y paladar. Dos veces/día</li>
+            <li><strong>6 meses o más</strong>: Empiezan a salir los dientes mismo procedimiento en encías, dientes, lengua y paladar. Dos veces/día</li>
             <li><strong>Más de 1 año</strong>: Empieza el cepillado. Usa un cepillo de dientes pequeño suave mojado con agua. No es necesario utilizar dentífrico; lo importante es el arrastre de placa bacteriana mediante una buena técnica de cepillado.</li>
             <li><strong>2 años y medio</strong>: Ya tienen dentición definitiva completa y sería recomendable que los niños comiencen a manejar el cepillo ellos mismos; siempre con supervisión de los padres. 	Nosotras solemos recomendar igual que en los adultos el cepillo eléctrico, pues la higiene es muy superior. 	</li>
         </ul>
