--- a/v2/patrodent/templates/quienes-somos.html
+++ b/v2/patrodent/templates/quienes-somos.html
@@ -62,7 +62,7 @@
                         <img src="{% static 'images/angela3.jpg' %}" alt="Fotografia de la doctora ángela martín" />
                     </td>
                     <td>
-                        <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
+                        <h3>Dra. Ángela Martín Gómez <a class="linkedin" href="https://www.linkedin.com/in/angelamartingom" target="_blank"><i class="fab fa-linkedin"></i></a></h3>
                         <p>Directora médica. CIRUJANA BUCAL</p>
                         <ul class="enum">
                             <li>Graduada en Odontología. Universidad Europea de Madrid</li>
