--- a/v2/patrodent/static/photoswipe/website/_layouts/default.html
+++ b/v2/patrodent/static/photoswipe/website/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en" prefix="og: http://ogp.me/ns#" debug="true">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">    
-    <meta charset="utf-8">
+    <meta charset="iso-8859-1">
 
     <title>{{ page.title }}</title>
 
